<resources>
    <string name="app_name" translatable="false">ALGO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="getPointTask">Get a task</string>
    <string name="taskButton">Send</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="loginButton">Log in</string>
    <string name="pointQueueButton">Start the quest</string>
    <string name="showQuestButton">Quest points</string>
    <string name="questListHeader">Quest list</string>
    <string name="conformPasswordHint">Confirm password</string>
    <string name="preLoginDescription">Create new account or log in</string>
    <string name="registerButton">Create new account</string>
    <string name="taskSuccess">Great! Your answer is right!</string>
    <string name="permissionMessage">ALGO asks a permission to your camera and location.</string>
    <string name="permissionAllow">OK</string>
    <string name="permissionDeny">Cancel</string>
    <string name="pointsListHeader">Quest points list</string>
    <string name="taskTitle">Choose the right variant</string>
    <string name="profileExitButton">Exit</string>
    <string name="questsCompletedTitle">Quests passed:</string>
    <string name="pointsCompletedTitle">Points passed:</string>
    <string name="kilometersCompletedTitle">Km passed:</string>
    <string name="bonusesCollectedTitle">Bonus got:</string>
    <string name="languageItem">Change the language</string>
    <string name="aboutItem">About the programm</string>
    <string name="accountItem" translatable="false">UserAccount</string>
    <string name="helloText">Hello, %1$s!</string>
    <string name="routeNotFoundText">ALGO cannot make a walking route. Probably you are in another city</string>
    <string name="taskFail">Oops, your answer is wrong. Try again!</string>
    <string name="completedMessage">Congratulations! You have passed the quest! Now the app is in Beta-testing. Please rate the app and leave a reply.</string>
</resources>